# finding_k

./: README.md  pyproject.toml  setup.py
.gitignore/: Python.gitignore
MyLibrary/: Getting_k.py  __init__.py
MyLibrary.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
